# Helix-Shell

./: .dockerignore  .gitignore  .hshellrc  CMakeLists.txt  DOCKER-QUICKSTART.md  Dockerfile  Makefile  README.md  SETUP.md  docker-compose.yml  install.sh  setup.sh  test-git-hooks.sh
.github/: CI-CD.md
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: ARCHITECTURE.md  DOCKER.md  LINUX_TESTING.md  PROMPT.md  Platforms.md  RELEASING.md
homebrew-tap/: DEPLOYMENT.md  README.md  update-formula.sh
homebrew-tap/Formula/: helix-shell.rb
include/: ai_provider.h  executor.h  parser.h  prompt.h  readline_support.h  shell.h  tokenizer.h  types.h
include/executor/: environment_expander.h  executable_resolver.h  fd_manager.h  interfaces.h  pipeline_manager.h
include/shell/: builtin_handler.h  interfaces.h  job_manager.h  shell_state.h
macos-app/HelixShell.app/Contents/: Info.plist
macos-app/HelixShell.app/Contents/MacOS/: helix  helix-launcher
macos-app/HelixShell.app/Contents/Resources/: AppIcon.icns
macos-app/HelixShell.app/Contents/_CodeSignature/: CodeDirectory  CodeResources
macos-app/HelixTerminal/: build.sh
macos-app/HelixTerminal/Sources/: TerminalController.swift  main.swift
release/: Helix-Shell-v1.0.0-macos.dmg
scripts/: README.md  create-release.sh  docker-build.sh  docker-publish.sh  install.sh  package-macos-app.sh  setup-hooks.sh  setup.sh  update-cask.sh
src/: ai_provider.cpp  executor.cpp  main.cpp  parser.cpp  prompt.cpp  readline_support.cpp  shell.cpp  tokenizer.cpp
src/executor/: environment_expander.cpp  executable_resolver.cpp  fd_manager.cpp  pipeline_manager.cpp
src/shell/: builtin_handler.cpp  job_manager.cpp
tests/: CMakeLists.txt  catch.h  main.cpp  test_executor.cpp  test_helpers.h  test_integration.cpp  test_main.cpp  test_parser.cpp  test_shell.cpp  test_shell.h  test_tokenizer.cpp
workspace/: README.md
